2005-12-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ViewportLayout.java
	(layoutContainer): Always check and adjust the size, not only when
	portSize >= view.minSize.

2005-12-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(getPreferredSize): Don't check for the minimumSize. According to
	a mauve test, this is not necessary.

2005-12-11  Mark Wielaard  <mark@klomp.org>

	* doc/hacking.texinfo: Add section on branches.

2005-12-11  Guilhem Lavaux  <guilhem@kaffe.org>

	* lib/copy-vmresources.sh.in: Added some '.' after find. 
	
2005-12-09  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/CSS.java:
	Fixed class signature.
	* javax/swing/text/html/HTMLEditorKit.java:
	Fixed class signature.
	(LinkController): New class added with only stubs. Functions
	are not implmented yet.
	(InsertHTMLTextAction): New class. Constructors implemented.
	(insertHTML): Implemented.
	(insertAtBoundary): Added, not yet implemented.
	(insertAtBoundry): Implemented.
	(actionPerformed): Added, not yet implemented.
	(HTMLTextAction): New class.
	(getHTMLDocument): Implemented.
	(getHTMLEditorKit): Implemented.
	(getElementsAt): Implemented.
	(elementCountToTag): Added, not yet implemented.
	(findElementMatchingTag): Likewise.
	(getViewFactory): Implemented.
	(HTMLFactory): Moved to beginning of class, with other inner classes.
	(ParserCallBack): Added constructor, not yet implemented.
	(clone): Added, not yet implemented. Calls super.
	(createInputAttributes): Likewise.
	(install): Likewise.
	(deinstall): Likewise.
	(getActions): Likewise.
	(getInputAttributes): Likewise.
	(getDefaultCursor): Implemented.
	(getLinkCursor): Implemented.
	(SetLinkCursor): Implemented.
	(setDefaultLinkCursor): Implemented.
	(AccessibleContext): Can't implement until AccessibleHTML is
	implemented. Currently, returns null because accessibility is not supported.

2005-12-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JEditorPane.java: