@@ -1,3 +1,8 @@
+2005-12-12  Gary Benson  <gbenson@redhat.com>
+
+	* java/security/Security.java (setProperty): Spelling correction.
+	* java/security/Security.java (setProperty): Allow null values.
+
 2005-12-12  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/ViewportLayout.java
